--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tanstack/react-query": "5.45.1",
     "dotenv": "^16.5.0",
     "ethers": "^6.13.5",
+    "lucide-react": "^0.509.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
