--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dotenv": "^16.5.0",
     "ethers": "^6.13.5",
     "lucide-react": "^0.509.0",
+    "multiparty": "^4.2.3",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
