--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@farcaster/frame-wagmi-connector": "latest",
     "@pinata/sdk": "^2.1.0",
     "@supabase/supabase-js": "^2.49.4",
+    "@tailwindcss/line-clamp": "^0.4.4",
     "@tanstack/react-query": "5.45.1",
     "dotenv": "^16.5.0",
     "ethers": "^6.13.5",
