--- a/package.json
+++ b/package.json
@@ -31,11 +31,15 @@
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
     "@netlify/functions": "^3.1.2",
+    "@tailwindcss/postcss": "^4.1.6",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.2.1",
     "@wagmi/cli": "latest",
+    "autoprefixer": "^10.4.21",
+    "postcss": "^8.5.3",
+    "tailwindcss": "^3.3.0",
     "typescript": "^5.4.5",
     "vite": "^5.2.11"
   }
