--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "react-dom": "^18.3.1",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.5.1",
+    "recharts": "^2.15.3",
     "uuid": "^11.1.0",
     "viem": "latest",
     "wagmi": "latest"
