--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@farcaster/frame-sdk": "latest",
-    "@farcaster/frame-wagmi-connector": "latest",
+    "@farcaster/frame-sdk": "^0.4.2",
+    "@farcaster/frame-wagmi-connector": "^0.1.0",
     "@pinata/sdk": "^2.1.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/line-clamp": "^0.4.4",
@@ -26,8 +26,8 @@
     "react-router-dom": "^7.5.1",
     "recharts": "^2.15.3",
     "uuid": "^11.1.0",
-    "viem": "latest",
-    "wagmi": "latest"
+    "viem": "^2.7.3",
+    "wagmi": "^2.5.5"
   },
   "devDependencies": {
     "@biomejs/biome": "^1.8.0",
@@ -37,7 +37,7 @@
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
     "@vitejs/plugin-react": "^4.2.1",
-    "@wagmi/cli": "latest",
+    "@wagmi/cli": "^2.1.4",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "tailwindcss": "^3.3.0",
