--- a/package.json
+++ b/package.json
@@ -10,8 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@farcaster/frame-sdk": "^0.4.2",
-    "@farcaster/frame-wagmi-connector": "^0.1.0",
+    "@farcaster/frame-sdk": "^0.0.45",
+    "@farcaster/frame-wagmi-connector": "^0.0.34",
+    "@netlify/blobs": "^9.1.1",
     "@pinata/sdk": "^2.1.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/line-clamp": "^0.4.4",
