big index-related updates sometimes are full of errors

--- a/package.json
+++ b/package.json
@@ -4,12 +4,12 @@
   "version": "0.0.0",
   "type": "module",
   "scripts": {
-  "dev": "vite",
-  "build": "tsc && vite build",
-  "build:functions": "tsc --project netlify/tsconfig.json",
-  "build:all": "npm run build && npm run build:functions",
-  "lint": "biome check src",
-  "preview": "vite preview"
+    "dev": "vite",
+    "build": "tsc && vite build",
+    "build:functions": "tsc --project netlify/tsconfig.json",
+    "build:all": "npm run build && npm run build:functions",
+    "lint": "biome check src",
+    "preview": "vite preview"
   },
   "dependencies": {
     "@farcaster/frame-sdk": "^0.0.45",
@@ -36,6 +36,7 @@
     "@biomejs/biome": "^1.8.0",
     "@netlify/functions": "^3.1.2",
     "@tailwindcss/postcss": "^4.1.6",
+    "@types/node-fetch": "^2.6.12",
     "@types/react": "^18.3.1",
     "@types/react-dom": "^18.3.0",
     "@types/uuid": "^10.0.0",
